platform/security/allow-app.yaml
# 🔒 DENY ALL
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: security
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
# 🌐 ALLOW DNS
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: security
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
# 🌍 ALLOW ALB → APP
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alb
  namespace: security
spec:
  podSelector:
    matchLabels:
      app: zero-trust-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0   # TEMP
      ports:
        - protocol: TCP
          port: 80
---
# 🌐 ALLOW INTERNET (TEMP)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet
  namespace: security
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
